Refactor the app to use Apache Cassandra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,22 @@ spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.http.encoding.force=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/geo
-#spring.datasource.username=username
-#spring.datasource.password=password
+spring.main.allow-circular-references=true
 
-#spring.flyway.enabled=false
+#spring.data.cassandra.keyspace-name=<cassandra.keyspace-name>
+#spring.data.cassandra.username=<cassandra.username>
+#spring.data.cassandra.password=<cassandra.password>
+spring.data.cassandra.schema-action=create-if-not-exists
+spring.data.cassandra.request.timeout=10s
+spring.data.cassandra.connection.connect-timeout=10s
+spring.data.cassandra.connection.init-query-timeout=10s
 
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.open-in-view=true
-spring.jpa.show-sql=true
+datastax.astra.secure-connect-bundle=secure-connect.zip
+
+#astra.db.id=<astra.db.id>
+#astra.db.region=<astra.db.region>
+#astra.db.keyspace=<astra.db.keyspace>
+#astra.db.application.token=<astra.db.application.token>
 
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
